Test/test0/WhereParsing2.bpl.expect
WhereParsing2.bpl(3,14): error: invalid Consts
1 parse errors detected in WhereParsing2.bpl
